--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </p>
     </div>
     <div class="row" id="three">
-        <div class="col-md" id="button-container">
-            <button type="button" class="btn" id="ios">Download for IOS</button>
+        <div class="col-md button-container">
+            <button type="button" class="btn ios">Download for IOS</button>
         </div>
-        <div class="col-md" id="button-container">
-            <button type="button" class="btn" id="mac">Download for Mac</button>
+        <div class="col-md button-container">
+            <button type="button" class="btn mac">Download for Mac</button>
         </div>
     </div>
     <div class="row p-3" id="four">
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="row p-3" id="nine">
-        <div class="col-md align-self-center" id="feature">
+        <div class="col-md align-self-center feature">
             <img class="icon" src="./images/icon-blacklist.svg" alt="blacklist icon" aria-hidden="true">
             <h3 class="feature-title">Create blacklists</h2>
             <p class="content">
@@ -95,14 +95,14 @@
                 clipboard by excluding certain sources.
             </p>
         </div>
-        <div class="col-md align-self-center" id="feature">
+        <div class="col-md align-self-center feature">
             <img class="icon" src="./images/icon-text.svg" alt="paper icon" aria-hidden="true">
             <h3 class="feature-title">Plain text snippets</h2>
             <p class="content">
                 Remove unwanted formatting from copied text for a consistent look  
             </p>
         </div>
-        <div class="col-md align-self-center" id="feature">
+        <div class="col-md align-self-center feature">
             <img class="icon" src="./images/icon-preview.svg" alt="eye icon" aria-hidden="true">
             <h3 class="feature-title">Sneak preview</h2>
             <p class="content">
@@ -111,19 +111,19 @@
         </div>
     </div>
     <div class="row justify-content-center" id="ten">
-        <div class="col-md" id="companies">
+        <div class="col-md companies">
             <img class="company-logo" src="./images/logo-google.png" alt="google logo" aria-hidden="true">
         </div>
-        <div class="col-md" id="companies">
+        <div class="col-md companies">
             <img class="company-logo" src="./images/logo-ibm.png" alt="ibm logo" aria-hidden="true">
         </div>
-        <div class="col-md" id="companies">
+        <div class="col-md companies">
             <img class="company-logo" src="./images/logo-microsoft.png" alt="microsoft logo" aria-hidden="true">
         </div>
-        <div class="col-md" id="companies">
+        <div class="col-md companies">
             <img class="company-logo" src="./images/logo-hp.png" alt="hp logo" aria-hidden="true">
         </div>
-        <div class="col-md" id="companies">
+        <div class="col-md companies">
             <img class="company-logo" src="./images/logo-vector-graphics.png" alt="vg logo" aria-hidden="true">
         </div>
     </div>
@@ -136,31 +136,31 @@
     </div>
     <div class="row" id="twelve">
         <div class="col-md" id="button-container">
-            <button type="button" class="btn" id="ios">Download for IOS</button>
+            <button type="button" class="btn ios">Download for IOS</button>
         </div>
         <div class="col-md" id="button-container">
-            <button type="button" class="btn" id="mac">Download for Mac</button>
+            <button type="button" class="btn mac">Download for Mac</button>
         </div>
     </div>
   </main>
   <footer>
-    <div class="row p-3 justify-content-center" id="footer-logo">
-        <div class="col-md align-self-center" id="footer-container">
+    <div class="row p-3 justify-content-center">
+        <div class="col-md align-self-center footer-container">
             <img class="logo-small" src="./images/logo.svg" alt="clipboard logo" aria-label="clipboard logo">
         </div>
-        <div class="col-md align-self-center" id="footer-container">
-            <a class="content" href="#" id="footer-content">FAQs</a><br>
-            <a class="content" href="#" id="footer-content">Contact Us</a>
+        <div class="col-md align-self-center footer-container">
+            <a class="content footer-content" href="#">FAQs</a><br>
+            <a class="content footer-content" href="#">Contact Us</a>
             
         </div>
-        <div class="col-md align-self-center" id="footer-container">
-            <a class="content" href="#" id="footer-content">Privacy Policy</a><br>
-            <a class="content" href="#" id="footer-content">Press Kit</a>
+        <div class="col-md align-self-center footer-container">
+            <a class="content footer-content" href="#">Privacy Policy</a><br>
+            <a class="content footer-content" href="#">Press Kit</a>
         </div>
-        <div class="col-md align-self-center" id="footer-container">
-            <a class="content" href="#" id="footer-content">Install Guide</a>
+        <div class="col-md align-self-center footer-container">
+            <a class="content footer-content" href="#">Install Guide</a>
         </div>
-        <div class="col-md align-self-center" id="footer-socials">
+        <div class="col-md align-self-center footer-socials">
             <a href="#"><img class="social" src="./images/icon-facebook.svg" alt="facebook logo" aria-label="facebook"></a>
             <a href="#"><img class="social" src="./images/icon-instagram.svg" alt="instagram logo" aria-label="instagram"></a>
             <a href="#"><img class="social" src="./images/icon-twitter.svg" alt="twitter logo" aria-label="twitter"></a>
