fixed button container issue

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
         </p>
     </div>
     <div class="row" id="twelve">
-        <div class="col-md" id="button-container">
+        <div class="col-md button-container">
             <button type="button" class="btn ios">Download for IOS</button>
         </div>
-        <div class="col-md" id="button-container">
+        <div class="col-md button-container">
             <button type="button" class="btn mac">Download for Mac</button>
         </div>
     </div>
